<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BillHistoyActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/todayHistoryBtn"
            android:padding="@dimen/space5dp"
            android:layout_marginTop="@dimen/space10dp"
            android:layout_marginLeft="@dimen/space10dp"
            android:layout_marginRight="@dimen/space10dp"
            android:layout_width="match_parent"
            android:text="@string/today"
            android:layout_weight="1"
            style="@style/IconTextContainedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bigningHistoryBtn"
            android:padding="@dimen/space5dp"
            android:layout_marginTop="@dimen/space10dp"
            android:layout_marginLeft="@dimen/space10dp"
            android:layout_marginRight="@dimen/space10dp"
            android:layout_width="match_parent"
            android:text="@string/bigning"
            android:layout_weight="1"
            style="@style/IconTextContainedButton" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space5dp"
        android:backgroundTint="@color/white"
        android:padding="2dp"
        card_view:cardElevation="7dp"
        card_view:strokeColor="@color/cardViewBorder"
        card_view:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shgNameTv"
                android:text="@string/shg_name"
                android:layout_marginRight="@dimen/space5dp"
                android:layout_marginLeft="@dimen/space5dp"
                android:layout_marginTop="@dimen/space5dp"
                android:padding="@dimen/space5dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/billHistoryDateTv"
                android:text=""
                android:paddingLeft="@dimen/space5dp"
                android:paddingRight="@dimen/space5dp"
                android:layout_marginRight="@dimen/space5dp"
                android:layout_marginLeft="@dimen/space5dp"
                android:layout_marginBottom="@dimen/space5dp"
                android:fontFamily="@font/roboto_regular" />



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




    <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/addItemCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space5dp"
        android:backgroundTint="@color/white"
        android:padding="2dp"
        card_view:cardElevation="7dp"
        card_view:strokeColor="@color/cardViewBorder"
        card_view:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="@dimen/space5dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>





</LinearLayout>